doc: format docs.

--- a/docs/详细设计.md
+++ b/docs/详细设计.md
@@ -26,34 +26,34 @@ Tags: Document
 name: "example" ## 流程名称
 version: "1.0" ## 流程版本
 dag:
-	global-parameters:
-		parameter1: "parameter1"
-		parameter2: "parameter2"
-	nodes:
-		- id: file-input
-			type: SOURCE ## 分为 SOURCE、PROCESSOR、SINK
-			processor: file-source-function ## 对应Processor
-			parameters:
-				file-path: "" ## 节点需要的参数, 应该与processor里需要参数对应
-		- id: operator-1
-			type: PROCESSOR
-			processor: oper1
-			parameters:
-				regex: "####(.?)####"
-			deps: ["file-input"] ## 依赖于file-input的输出, 这里为ID关联
-		- id: operator-2
-			type: PROCESSOR
-			processor: oper2
-			parameters:
-				filedMapping:
-					name: "description"
-			deps: ["file-input"] 
-		- id: sink
-			type: SINK
-			processor: file-sink
-			parameters:
-				file-path: ""
-			deps: ["operator-1", "operator-2"]
+  global-parameters:
+  parameter1: "parameter1"
+  parameter2: "parameter2"
+  nodes:
+    - id: file-input
+      type: SOURCE
+      processor: file-source-function ## 对应Processor
+      parameters:
+        file-path: "" ## 节点需要的参数, 应该与processor里需要参数对应
+    - id: operator-1
+      type: PROCESSOR
+      processor: oper1
+      parameters:
+        regex: "####(.?)####"
+      deps: [ "file-input" ] ## 依赖于file-input的输出, 这里为ID关联
+    - id: operator-2
+      type: PROCESSOR
+      processor: oper2
+      parameters:
+        filedMapping:
+          name: "description"
+      deps: [ "file-input" ]
+    - id: sink
+      type: SINK
+      processor: file-sink
+      parameters:
+        file-path: ""
+      deps: [ "operator-1", "operator-2" ]
 ```
 
 ![生成dag图](assets/task-image.png)
